Navigation: Add Event Listeners and Handlers

--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
         <div class="nav-wrapper container">
           <a href="#" class="brand-logo"><i class="material-icons left">save</i>CAP KEEPS</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#"><i class="material-icons left">library_add</i>Add Caption</a></li>
-            <li><a href="#"><i class="material-icons left">music_note</i>Search Lyrics</a></li>
-            <li><a href="#"><i class="material-icons left">storage</i>My Captions</a></li>
+            <li><a href="#" id="add-caption-link"><i class="material-icons left">library_add</i>Add Caption</a></li>
+            <li><a href="#" id="search-lyrics-link"><i class="material-icons left">music_note</i>Search Lyrics</a></li>
+            <li><a href="#" id="my-captions-link"><i class="material-icons left">storage</i>My Captions</a></li>
             <li><a href="#" id="home-link"><i class="material-icons">home</i></a></li>
           </ul>
         </div>
     </nav>
-    <div id="main"></div>
+    <div class="container" id="main">
+    </div>
 
     <script src="javascript/index.js"></script>
 </body>
