--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <a href="#" class="brand-logo"><i class="material-icons left">save</i>CAP KEEPS</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#" id="add-caption-link"><i class="material-icons left">library_add</i>Add Caption</a></li>
-            <li><a href="#" id="search-lyrics-link"><i class="material-icons left">music_note</i>Search Lyrics</a></li>
-            <li><a href="#" id="my-captions-link"><i class="material-icons left">storage</i>My Captions</a></li>
+            <li><a href="#" id="my-captions-link"><i class="material-icons left">storage</i>My Captions <span id="badge" class="new badge" data-badge-caption=""></span></a></li>
             <li><a href="#" id="home-link"><i class="material-icons">home</i></a></li>
           </ul>
         </div>
-    </nav>
-    
+      </nav>
+    <div class="container" id="toggle-head">
+    </div><br>
     <div class="container" id="main">
     </div>
     <br><br><br>
